<resources>
    <string name="app_name">PCI</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_canc">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_menu_principal">PRINCIPAL - V 2.02</string>
    <string name="texto_colaborador">MATRIC. COLABORADOR:</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_atualizar_dados">ATUALIZAR DADOS</string>
    <string name="texto_retornar">RETORNAR</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="texto_titulo_desc_os">DESCRIÇÃO DA OS</string>
    <string name="texto_nro_os">OS 99975</string>
    <string name="texto_cd_planta">1.04.01.04</string>
    <string name="texto_descr_planta">PRÉDIO P/ MOTORISTAS E PÁTIO</string>
    <string name="texto_padrao_cancelar">CANC</string>
    <string name="texto_dados_titulo_auditor">AUDITOR:</string>
    <string name="texto_dados_auditor">19759 - ANDERSON DA SILVA DELGADO</string>
    <string name="texto_dados_os">OS: 99974</string>
    <string name="texto_padrao_enviar">ENVIAR</string>
    <string name="texto_padrao_excluir">EXCLUIR</string>
    <string name="texto_padrao_inserir">INSERIR</string>
    <string name="texto_titulo_checklist">CHECKLIST</string>
    <string name="texto_conforme">CONFORME</string>
    <string name="texto_nao_conforme">NÃO CONFORME</string>
    <string name="texto_titulo_observacao">OBSERVAÇÃO</string>
    <string name="texto_titulo_desc_questao">DESCRIÇÃO DA QUESTÃO</string>
    <string name="texto_editar">EDITAR</string>
    <string name="texto_envio_dados">ENVIANDO DADOS</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="texto_planta_cd">1.04.02.01</string>
    <string name="texto_planta_descr">TOMBADOR HILO N° 01 - CANA PICADA</string>
    <string name="texto_planta">PLANTA</string>
    <string name="texto_atualizar">ATUALIZAR DADOS</string>
    <string name="texto_cancelar">CANCELAR</string>
    <string name="texto_pos_questao">QUESTÃO 1</string>
    <string name="texto_desc_questao">LADO DIREITO</string>
    <string name="texto_status_questao">CONFORME</string>
    <string name="texto_titulo_os">ORDEM DE SERVIÇO</string>
    <string name="texto_descr_questao">VERIFICAR PARTE ESQUERDA</string>
    <string name="texto_nro_aparelho_config">NRO APARELHO:</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="texto_periodo_os">DIÁRIA</string>
    <string name="texto_inicio">INICIANDO O APLICATIVO...</string>
</resources>