<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    >

        <TextView
            android:id="@+id/textViewPeriodoOS"
            style="@style/TextView"
            android:textStyle="bold"
            android:text="@string/texto_periodo_os"
            />

        <TextView
            android:id="@+id/textViewNroOS"
            style="@style/TextView"
            android:textStyle="bold"
            android:text="@string/texto_nro_os"
            />

        <TextView
            android:id="@+id/textViewCdPlanta"
            style="@style/TextView"
            android:text="@string/texto_cd_planta"
            />

        <TextView
            android:id="@+id/textViewDescrPlanta"
            style="@style/TextView"
            android:text="@string/texto_descr_planta"
            />

</LinearLayout>
