<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    >

    <TextView
        android:id="@+id/textViewPosQuestao"
        style="@style/TextView"
        android:paddingTop="10dp"
        android:text="@string/texto_pos_questao"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDescrQuestao"
        style="@style/TextView"
        android:text="@string/texto_desc_questao" />

    <TextView
        android:id="@+id/textViewStatusQuestao"
        style="@style/TextView"
        android:text="@string/texto_status_questao"
        android:textStyle="bold" />

</LinearLayout>
